[package]
name = "gk-server-lib"
version = "0.1.0"
edition = "2021"
authors = ["GrauKatze","Mastodon <https://mastodon.ml/@graukatze>"]
description = "lib of server fot my projects"
repository = "https://notabug.org/GrauKatze/gk-server-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
